--- a/css/styles.css
+++ b/css/styles.css
@@ -59,9 +59,7 @@ h2 {
   margin: 0.8em 0;
 }
 
-/* Set legend font-size and margins as h3 */
-h3,
-legend {
+h3 {
   font-size: 1.25em;
   margin: 1em 0;
 }
@@ -322,6 +320,58 @@ address p {
 
 .no-wrap {
   white-space: nowrap;
+}
+
+/* ========== #loading-layer ========== */
+
+#loading-layer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 999999;
+  -webkit-transform-origin: top left;
+  -ms-transform-origin: top left;
+  transform-origin: top left;
+}
+
+#loading-layer.loaded {
+  -webkit-animation: disappear 0.3s forwards;
+  animation: disappear 0.3s forwards;
+}
+
+@-webkit-keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
 }
 
 /* ========== .header ========== */
@@ -764,6 +814,51 @@ abbr[class|="stars"] {
   opacity: 1;
 }
 
+/* ========== .error-page ========== */
+
+.error-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.error-page main {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.error-page main {
+  padding: 1em 1rem;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.error-page main> * {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 auto;
+  flex: 0 1 auto;
+}
+
+.error-page main header + p {
+  margin-top: 1.5625em;
+}
+
 /* ========== RESPONSIVE ========== */
 
 @media screen and (min-width: 500px) {
@@ -836,6 +931,10 @@ abbr[class|="stars"] {
 
   #reviews-list article {
     height: 100%;
+  }
+
+  header p {
+    font-size: 1.25em;
   }
 }
 
