--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,7 @@ html {
   -webkit-tap-highlight-color: transparent;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  min-height: 100%;
 }
 
 /* 1. Prevent font boosting on mobile browsers */
@@ -312,68 +313,15 @@ body {
   left: 1rem;
 }
 
-address {
-  font-size: 0.8em;
-}
-
-address p {
-  margin: 1.25em 0;
-}
-
 .no-wrap {
   white-space: nowrap;
 }
 
-/* ========== #loading-layer ========== */
-
-#loading-layer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #fff;
-  z-index: 999999;
-  -webkit-transform-origin: top left;
-  -ms-transform-origin: top left;
-  transform-origin: top left;
-}
-
-#loading-layer.loaded {
-  -webkit-animation: disappear 0.3s forwards;
-  animation: disappear 0.3s forwards;
-}
-
-@-webkit-keyframes disappear {
-  0% {
-    opacity: 1;
-  }
-  99% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    opacity: 0;
-  }
-  to {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    opacity: 0;
-  }
-}
-
-@keyframes disappear {
-  0% {
-    opacity: 1;
-  }
-  99% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    opacity: 0;
-  }
-  to {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    opacity: 0;
-  }
+.lazy {
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  transition: opacity 0.3s;
 }
 
 /* ========== .header ========== */
@@ -478,10 +426,6 @@ body> header h1,
   background-color: rgba(68,138,255,0.8); /* GMD Blue A200 */
 }
 
-#offline-alert {
-  margin: 0;
-}
-
 #static-map.offline {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -502,10 +446,14 @@ body> header h1,
   flex: 0 1 auto;
 }
 
-#static-map.offline p {
-  padding: 1.25em 1rem;
+#offline-alert {
+  padding: 0 1rem;
   background-color: #fff;
   box-shadow: 0.125em 0.32768em 0.4096em rgba(55,71,79,0.2); /* GMD Blue Grey 800 */
+}
+
+#offline-alert p:nth-child(2) {
+  text-align: right;
 }
 
 /* ========== #filter-options ========== */
@@ -574,6 +522,13 @@ body> header h1,
   text-transform: uppercase;
 }
 
+#restaurants-list article> h3,
+#restaurants-list address> p {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 #restaurants-list article> :not(picture):not(img) {
   padding: 0 1rem;
 }
@@ -623,6 +578,11 @@ body> header h1,
 
 #restaurant-cuisine strong {
   text-transform: uppercase;
+}
+
+#restaurant-address {
+  font-size: 0.8em;
+  margin: 1.25em 0;
 }
 
 .scrollable-x {
